<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolBar"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/color_naranja">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Activity_2"
            android:textSize="45dp"
            android:textColor="@color/color_blanco"
            />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linerarLayout_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/textView_usuario"
            android:inputType="numberDecimal"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/editText_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/textView_contraseña"
            android:inputType="textPassword"
            tools:targetApi="o" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:onClick="activity2"
            android:text="@string/button_iniciar" />

    </LinearLayout>
</LinearLayout>
